<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.invoiceapp.android.view.activity.GetStartedActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />


    <com.invoiceapp.android.custom.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lines="1"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_large"
        android:textStyle="bold" />


    <com.invoiceapp.android.custom.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:lines="1"
        android:text="@string/title_desc"
        android:textColor="@color/white"
        android:textSize="@dimen/text_small" />


    <com.invoiceapp.android.custom.CustomButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@color/white"
        android:lines="1"
        android:paddingBottom="16dp"
        android:paddingEnd="46dp"
        android:paddingStart="46dp"
        android:paddingTop="16dp"
        android:text="@string/get_started"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.invoiceapp.android.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:padding="16dp"
            android:text="@string/already_account"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small" />

    </LinearLayout>

</LinearLayout>
