<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.invoiceapp.android.view.fragment.detailsection.BusinessDetailsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher" />

            <com.invoiceapp.android.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:lines="1"
                android:text="@string/business_logo"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large" />

            <com.invoiceapp.android.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:lines="1"
                android:text="@string/businesss_logo_desc"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small" />


            <android.support.v7.widget.CardView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp">

                <com.invoiceapp.android.custom.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/choose_image"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
